feat(worker): model update endpoint; simplify model sync to in-place updates
